WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276181
[libpas] PGM Crash Testing: Align allocation to page size
https://bugs.webkit.org/show_bug.cgi?id=276181
Summary
[libpas] PGM Crash Testing: Align allocation to page size
Brandon
Reported
2024-07-03 10:56:58 PDT
Align allocation to page size to handle left/right alignment
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-07-03 10:57:50 PDT
<
rdar://problem/131064444
>
Brandon
Comment 2
2024-07-03 11:00:30 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30445
EWS
Comment 3
2024-07-10 15:44:38 PDT
Committed
280836@main
(69db44623766): <
https://commits.webkit.org/280836@main
> Reviewed commits have been landed. Closing PR #30445 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug