[libpas] PGM Crash Testing: Align allocation to page size https://bugs.webkit.org/show_bug.cgi?id=276181 rdar://problem/131064444

Reviewed by David Kilzer.

PGM will align pages left or right, so by allocating the entire length of the page
it will give the same result whether left or right aligned. This will make testing guard pages reliable again.

* Source/JavaScriptCore/jsc.cpp:
(crashPGMUAF):
(crashPGMUpperGuardPage):
(crashPGMLowerGuardPage):

Canonical link: https://commits.webkit.org/280836@main